--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Rokkitt&display=swap"
+      rel="stylesheet"
+    />
     <title>Modelgov Admin</title>
   </head>
   <body>
